--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   box-sizing: border-box;
 }
 
+.container_logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem;
+}
 
 .datosDelBuque {
     display: grid;
@@ -13,6 +20,48 @@
     grid-gap: 1px;
     background-color: #f0f0f0;
     padding: 1px;
+}
+
+.logo2 {
+    display: flex;
+}
+
+.logo2 .imgMin {
+    width: 15rem;
+    height: auto;
+}
+
+.logoPna {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    font-size: 2rem;
+    font-family: fantasy;
+    font-weight: 200;
+}
+
+.prefectura {
+    font-size: 3rem;
+}
+
+.logo2 img {
+    width: 5rem;
+    height: auto;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    margin: 2rem;
+}
+
+.tituloPrincipal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3rem;
 }
 
 .areas {
