--- a/style.css
+++ b/style.css
@@ -6,20 +6,33 @@
   box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    margin: 0 1rem;
+}
+
+.titulo {
+    font-size: 17px;
+    text-decoration: underline;
+    text-align: center;
+}
+
 .container_logo {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 .datosDelBuque {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1px;
     background-color: #f0f0f0;
     padding: 1px;
+    gap: 20px;
+    margin: 10px 0;
 }
 
 .logo2 {
@@ -42,10 +55,17 @@
 
 .prefectura {
     font-size: 3rem;
+    letter-spacing: 3px;
+    text-align: center;
+}
+
+.naval {
+    letter-spacing: 3px;
+    font-size: 2rem;
 }
 
 .logo2 img {
-    width: 5rem;
+    width: 8rem;
     height: auto;
 }
 
@@ -53,7 +73,7 @@
     display: flex;
     align-items: center;
     justify-content: end;
-    margin: 2rem;
+    margin-right: 2rem;
 }
 
 .tituloPrincipal {
@@ -86,4 +106,49 @@
     grid-gap: 10px;
     background-color: #f0f0f0;
     padding: 10px;
+    margin-bottom: 2rem;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin: 1rem 0;
+}
+
+.flex-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 1rem 0;
+}
+
+
+.miElemento {
+    display: block;
+    margin-bottom: 1rem
+}
+
+.btnDef{
+    margin: 2rem 0;
+    text-align: center;
+}
+
+.grid-cont{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+margin-bottom: 3rem;
+}
+
+.flex-cont{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.infoDeViaje {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 3rem;
 }
